<resources>
    <string name="app_name">DatVeMayBay</string>
    <string name="btnRoundTrip">Round trip</string>
    <string name="btnOneWay">One way</string>
    <string name="nav_home">Home</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_checkin">Check-in</string>
    <string name="help">Support</string>
    <string name="about_me">About me</string>
    <string name="nav_my_trip">Flight</string>
    <string name="more">More</string>
    <string name="history_booking">History booking</string>
    <string name="notify">Notification</string>
    <string name="my_seat">My seat</string>

    <string name="cheap_ticket">Cheap ticket, daily, everyday</string>
    <string name="txt_booking">Booking</string>
    <string name="txt_cheap_ticket">Famous cheap ticket</string>
    <string name="famous_place">Famous place</string>
    <string name="search_flight">Search flight</string>
    <string name="home_page">Home</string>

    <string name="date_go">Date go</string>
    <string name="date_arrival">Date arrival</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="adult">Adult</string>
    <string name="children">Children</string>
    <string name="baby">Baby</string>
    <string name="search">Search</string>

    <string name="select_place_go">Select place go</string>
    <string name="select_place_arrival">Select place arrival</string>
    <string name="search_place_go">Search place go</string>
    <string name="search_place_arrival">Search place arrival</string>

    <string name="error_from">Please select place start.</string>
    <string name="error_to">Please select place target.</string>
    <string name="error_date_go">Please select date go.</string>
    <string name="error_date_arrival">Please select date arrival.</string>
    <string name="error_num">Please select number of passenger.</string>
    <string name="error_validate_baby">Number of adult must be more than number of baby.</string>
    <string name="nav_airport">Airport</string>
    <string name="nav_flight">Flight</string>

    <string name="select_flight_go">Select flight go</string>
    <string name="select_flight_arrival">Select flight arrival</string>
    <string name="thoigian_di_dukien">Time start expected:</string>
    <string name="thoigian_den_dukien">Time end expected:</string>
    <string name="status_flight">Status of flight</string>
    <string name="btn_check">Check</string>
    <string name="ready_checkin">Are you ready to check-in?</string>
    <string name="guide_checkin">Type information an click button.</string>
    <string name="ticket_code">Ticket code:</string>

    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait a few minutes.</string>

    <string name="user_info">User Information</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="ID_code">ID Code:</string>
    <string name="email">Email:</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="alert_select_language">Please select your language.</string>
    <string name="success_language">Change language success.</string>


    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Vietnamese</string>
    <string name="japanese" translatable="false">Japanese</string>
</resources>
