<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/menu_booking"
            android:icon="@drawable/ic_flight_black_24dp"
            android:title="@string/nav_booking" />
        <item
            android:id="@+id/menu_checkin"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/nav_checkin" />
        <item
            android:id="@+id/menu_my_trip"
            android:icon="@drawable/ic_flight_takeoff_black_24dp"
            android:title="@string/nav_my_trip" />
        <item
            android:id="@+id/menu_notify"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notify" />
        <item
            android:id="@+id/menu_language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/language" />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/menu_support"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/menu_about_me"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/about_me" />
        </menu>
    </item>
</menu>