<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home"
        app:itemTextAppearance="@style/Font_Main"/>
    <item
        android:id="@+id/nav_booking"
        app:itemTextAppearance="@style/Font_Main"
        android:icon="@drawable/ic_flight_black_24dp"
        android:title="@string/nav_booking" />
    <item
        android:id="@+id/nav_checkin"
        app:itemTextAppearance="@style/Font_Main"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/nav_checkin"/>
    <item
        android:id="@+id/nav_my_trip"
        app:itemTextAppearance="@style/Font_Main"
        android:icon="@drawable/ic_flight_takeoff_black_24dp"
        android:title="@string/nav_my_trip"/>
</menu>