<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerUserInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FlightActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_checkinUserInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="#1F4788"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/user_info"
            app:titleTextColor="@color/colorBackgroundMain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_checkinUserInfo"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8E5E5"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/guide_checkin"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/first_name"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/custome_edittext_check"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/last_name"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/custome_edittext_check"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ID_code"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtIDCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/custome_edittext_check"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/custome_edittext_check"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtErrorUserInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text=""
                android:textColor="#ff00" />

            <Button
                android:id="@+id/btnConfirmBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_btn_check"
                android:text="@string/txt_booking"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>