<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:background="#E8E5E5"
        android:textColor="@color/dark_blue"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="15sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="77dp">

        <RadioButton
            android:id="@+id/rbtnVN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese" />

        <RadioButton
            android:id="@+id/rbtnEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_check"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="Cancel" />

        <Button
            android:id="@+id/btnDialogOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_btn_check"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>