<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.SelectAirportActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_airport"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:title="@string/nav_airport"
        app:titleTextColor="@color/colorBackgroundMain"
        android:layout_alignParentTop="true"
        android:background="@color/dark_blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/txtSelectPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#8C8686"
        android:text="@string/select_place_go" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtSearchPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:focusedByDefault="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:background="@drawable/edit_text_search"
            android:ems="10"
            android:hint="@string/search_place_go"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMenuSelected"/>

    <ListView
        android:id="@+id/lvAirport"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>