<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:title="@string/home_page"
                app:titleTextColor="@color/colorBackgroundMain"
                android:layout_alignParentTop="true"
                android:background="#1F4788"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <ScrollView
                android:id="@+id/scrollHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:layout_above="@id/bottom_navigation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackgroundMain"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="201dp"
                        android:background="@drawable/vna"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:padding="30dp"
                        android:textColor="@color/colorBackgroundMain"
                        android:textSize="42sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorMain"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="214dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:paddingStart="15dp"
                                android:paddingTop="10dp"
                                android:text="@string/txt_booking"
                                android:textColor="@color/colorBackgroundMain"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:paddingStart="15dp"
                                android:paddingBottom="10dp"
                                android:text="@string/txt_cheap_ticket"
                                android:textColor="@color/colorBackgroundMain"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btnSearchFlight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_transparent"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorBackgroundMain"
                            android:text="@string/search_flight" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundMain"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/famous_place"
                        android:textColor="#1F4788"
                        android:textSize="24sp" />

                        <LinearLayout
                            android:id="@+id/frame_famousPlace"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"/>

                </LinearLayout>
            </ScrollView>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:layout_alignParentBottom="true"
                app:itemBackground="@drawable/nav_view_item_background"
                app:itemTextColor="@drawable/nav_view_item_textcolor"
                app:menu="@menu/bottom_navigation"
                app:itemIconTint="@color/colorMain"
                android:background="@color/colorBackgroundMain"/>

        </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/toolbar_menu" />



</androidx.drawerlayout.widget.DrawerLayout>