<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerFlight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FlightActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_flight"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="#1F4788"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/nav_flight"
            app:titleTextColor="@color/colorBackgroundMain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/toolbar_flight">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/gray"
                android:layout_height="wrap_content"
                android:text="@string/status_flight" />

            <LinearLayout
            android:id="@+id/layoutFrom"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/custom_shape_layout_border"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:paddingLeft="5dp"
                    android:text="@string/from"
                    android:textColor="@color/colorMain" />

                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text=" "
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />

            </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_next_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_shape_layout_border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:paddingLeft="5dp"
                    android:text="@string/to"
                    android:textColor="@color/colorMain" />

                <TextView
                    android:id="@+id/txtTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text=" "
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_next_black_24dp" />

        </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDateGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_shape_layout_border"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_weight="9"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_light"
                        android:paddingLeft="5dp"
                        android:text="@string/date_go"
                        android:textColor="@color/colorMain" />

                    <TextView
                        android:id="@+id/txtDateGo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="6dp"
                        android:text=" "
                        android:textColor="@color/dark_gray"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_next_black_24dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtErrorCheckFlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textColor="#ff00"
                android:text="" />

            <Button
                android:id="@+id/btnSearchBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_btn_check"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:text="@string/btn_check" />

        </LinearLayout>

<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--            android:id="@+id/bottom_navigation_flight"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fitsSystemWindows="true"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            app:itemBackground="@drawable/nav_view_item_background"-->
<!--            app:itemTextColor="@drawable/nav_view_item_textcolor"-->
<!--            app:menu="@menu/bottom_navigation"-->
<!--            app:itemIconTint="@color/colorMain"-->
<!--            android:background="@color/colorBackgroundMain"/>-->

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_Flight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/toolbar_menu" />

</androidx.drawerlayout.widget.DrawerLayout>